--- a/app/views/app/ordenServicio/create/formCreate.scala.html
+++ b/app/views/app/ordenServicio/create/formCreate.scala.html
@@ -48,20 +48,20 @@ ordenServicio: OrdenServicio = null
 					
 					<!-- <div class="col-md-12"> -->
 						<div class=" col-md-6 col-sm-6">
-							<label for="">Nombre del Cliente:</label>
-							<input type="text" class="form-control">
-							<label for="">Ciudad:</label>
-							<input type="text" class="form-control">
-							<label for="">Teléfono:</label>
-							<input type="text" class="form-control">
+							<label>Nombre del Cliente:</label>
+							<input id="nombreCompleto" type="text" class="form-control">
+							<label>Ciudad:</label>
+							<input id="ciudad" type="text" class="form-control">
+							<label>Teléfono:</label>
+							<input id="telefono" type="text" class="form-control">
 						</div>
 						<div class=" col-md-6 col-sm-6">
-							<label for="">Email:</label>
-							<input type="text" class="form-control">
-							<label for="">WhatsApp:</label>
-							<input type="text" class="form-control">
-							<label for="">Facebook:</label>
-							<input type="text" class="form-control">
+							<label>Email:</label>
+							<input id="email" type="text" class="form-control">
+							<label>WhatsApp:</label>
+							<input id="whatsapp" type="text" class="form-control">
+							<label>Facebook:</label>
+							<input id="facebook" type="text" class="form-control">
 							<!-- </div> -->
 						</div>
 					
@@ -119,19 +119,19 @@ ordenServicio: OrdenServicio = null
 					<!-- style="display: none;" -->
 					<div id="tipoInstrumentoInput" class="row input clearMargin">
 						<div  class=" col-md-6  col-sm-6" >
-							<label for="">Marca:</label>
+							<label>Marca:</label>
 							<input type="text" class="form-control">
-							<label for="">Modelo:</label>
+							<label>Modelo:</label>
 							<input type="text" class="form-control">
-							<label for="">Núm. Serie:</label>
+							<label>Núm. Serie:</label>
 							<input type="text" class="form-control">
 						</div>
 						<div  class=" col-md-6 col-sm-6" >
-							<label for="">Color:</label>
+							<label>Color:</label>
 							<input type="text" class="form-control">
-							<label for="">Fecha de Producción:</label>
+							<label>Fecha de Producción:</label>
 							<input type="text" class="form-control">
-							<label for="">Almacén:</label>
+							<label>Almacén:</label>
 							<input type="text" class="form-control">
 						</div>
 					</div>
@@ -263,13 +263,13 @@ ordenServicio: OrdenServicio = null
 				<div class="col-md-12 col-sm-12">
 					<div class="row">
 						<div id="indicacionesCliente" class="input col-md-6 col-sm-6" >
-							<label for="">Encordar con:</label>
+							<label>Encordar con:</label>
 							<input type="text" class="form-control">
-							<label for="">Afinación:</label>
+							<label>Afinación:</label>
 							<input type="text" class="form-control">
 						</div>	
 						<div id="indicacionesCliente" class="input col-md-6 col-sm-6" >
-							<label for="">Acción:</label>
+							<label>Acción:</label>
 							<input type="text" class="form-control">
 						</div>		
 					</div>
