--- a/app/views/layouts/loginLayout.scala.html
+++ b/app/views/layouts/loginLayout.scala.html
@@ -15,18 +15,18 @@
     <body class="container-fluid">
         <div class="row">
             <section id="header" class="col-md-12">
-                <div class="col-md-4 ">
+                <div class="col-md-12 ">
                     <h1>Cordófonos</h1>
                     <h3>Taller de Guitarras y Bajos</h3>
 
                 </div>
             </section>
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                 <ul>
                     <li><a id="stylBtn1" href="#" rel="/assets/stylesheets/login.css">Tema1</a></li>
                     <li><a id="stylBtn2" href="#" rel="/assets/stylesheets/switchCss/loginBlack.css">Tema2</a></li>
                 </ul>
-            </div>
+            </div> -->
         </div>
         <div class="contentWrapper">
         @content
