--- a/app/views/app/ordenServicio/create/agregaServicios.scala.html
+++ b/app/views/app/ordenServicio/create/agregaServicios.scala.html
@@ -1,30 +1,28 @@
 <div id="servicios" class="col-md-12 tab-pane fade">
 	<div class="col-md-12">
 		<legend><h3>Servicios a realizar</h3></legend>
-		<div class="row">
-			<div class="col-md-8">
+		<div class="row clearfix">
+			<div class="col-md-8 col-sm-8 col-xs-8">
 				<label>Servicio:</label>
 				<select name="" id="optionsServicios" class="form-control">
 		            <option value="" disabled="disabled" selected>Seleccione una opci&oacute;n</option>
-					<option value="">1</option>
-					<option value="">2</option>
-					<option value="">3</option>
 				</select>	
 			</div>
-			<div class="col-md-4">
-				<button class="btn btn-default">Agregar Servicio</button>
+			<div class="col-md-4 col-sm-4 col-xs-4">
+				<label>Costo:</label>
+				<input class="form-control" type="text">
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-8">
+			<div class="col-md-8 col-sm-8 col-xs-8">
 				<label>Técnico Responsable:</label>
 				<input class="form-control" type="text">
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-8">
-				<label>Costo:</label>
-				<input class="form-control" type="text">
+			<div class="row space">
+				
+			</div>
+			<div class="col-md-4 col-sm-4 col-xs-4" style="margin:20px 20px;">
+				<a class="btn btn-default">Agregar Servicio</a>
 			</div>
 		</div>
 
