--- a/public/javascripts/libs/loopj/token-input.css
+++ b/public/javascripts/libs/loopj/token-input.css
@@ -2,15 +2,17 @@
 ul.token-input-list {
     overflow: hidden; 
     height: auto !important; 
-    height: 1%;
-    width: 400px;
-    border: 1px solid #999;
+    height: 30px;
+    width: 100%;
+    /*border: 1px solid #999;*/
+      border: 1px solid #ccc;
+      border-radius: 4px;
     cursor: text;
     font-size: 12px;
-    font-family: Verdana;
+    /*font-family: Verdana;*/
     z-index: 999;
     margin: 0;
-    padding: 0;
+    padding: 6px 12px;
     background-color: #fff;
     list-style-type: none;
     clear: left;
