--- a/app/views/app/ordenServicio/create/agregaServicios.scala.html
+++ b/app/views/app/ordenServicio/create/agregaServicios.scala.html
@@ -30,7 +30,7 @@
 
 		<div class="row">
 			<div class=" col-md-12">
-				<table class="table" id="tabla-prueba">
+				<table class="table tabla-prueba">
 					<thead>
 						<tr>
 							<th>Servicio</th>
