--- a/app/views/app/ordenServicio/create/firma.scala.html
+++ b/app/views/app/ordenServicio/create/firma.scala.html
@@ -1,9 +1,9 @@
-<div id="firmaCliente" class="col-md-12" style="display:none;">
+<div id="firmaCliente" class="col-md-12" >
 	<br>
 	<legend><h3>Firma del Cliente</h3></legend>
 	<div class="col-md-12">
 		<div class="row">
-			<div id="firmaElectronica"></div>
+			<div id="div-firmaElectronica"></div>
 			<div  id="demotools" class="text-center col-md-6 col-md-offset-3">
 				<!-- <span><b>Extraer data de firma como:</b></span>
 				<select class="form-control">
@@ -20,6 +20,7 @@
 				<span><b> o </b></span> -->
 				<input class="btn" id="limpiarBtn" type="button" value="Limpiar">
 				<input class="btn" id="guardarFirmaBtn" type="button" value="Guardar Firma">
+				<input type="text"  id="firmaElectronica" name="firmaElectronica">
 			</div>
 			<div class="row">
 				<br>
