--- a/app/views/app/ordenServicio/create/formCreate.scala.html
+++ b/app/views/app/ordenServicio/create/formCreate.scala.html
@@ -31,7 +31,7 @@ ordenServicio: OrdenServicio = null
 			  <li ><a data-toggle="tab" href="#inspeccionInventario">Inspección e Inventario</a></li>
 			  <li class="disabled"><a >Indicaciones del Cliente</a></li>
 			  <li class="disabled"><a >Servicios</a></li>
-			</ul>
+			</ul>	
 		</div>
 	<!-- <div class="panel panel-default"> -->
 		<div class="row tab-content ">
@@ -252,8 +252,7 @@ ordenServicio: OrdenServicio = null
 					<div class="col-md-12 col-sm-12">
 						<legend><h3>Anotaciones</h3></legend>
 						<div class="col-md-6 col-sm-6">
-							<textarea id="anotaciones" name="anotaciones" class="form-control" maxlength="21844" rows="4" cols="20" style="width: 100%;">
-								
+							<textarea id="anotaciones" name="anotaciones" class="form-control"style="width: 100%;">
 							</textarea>
 						</div>
 						
