--- a/app/views/app/ordenServicio/create/agregaServicios.scala.html
+++ b/app/views/app/ordenServicio/create/agregaServicios.scala.html
@@ -10,7 +10,7 @@
 			</div>
 			<div class="col-md-4 col-sm-4 col-xs-4">
 				<label>Costo:</label>
-				<input class="form-control" type="text">
+				<input class="form-control" type="number">
 			</div>
 		</div>
 		<div class="row">
