--- a/app/views/app/ordenServicio/create/firma.scala.html
+++ b/app/views/app/ordenServicio/create/firma.scala.html
@@ -1,4 +1,4 @@
-<div id="firmaCliente" class="col-md-12" >
+<div class="col-md-12" id="firmaCliente" style="display:none;">
 	<br>
 	<legend><h3>Firma del Cliente</h3></legend>
 	<div class="col-md-12">
