--- a/app/views/layouts/templates/_scripts.scala.html
+++ b/app/views/layouts/templates/_scripts.scala.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="@routes.Assets.versioned("javascripts/libs/underscore/underscore.js")"></script>
     <script type="text/javascript" src="@routes.Assets.versioned("javascripts/libs/dateFormat/jquery-dateFormat.min.js")"></script>
     <script type="text/javascript" src="@routes.Assets.versioned("javascripts/libs/loopj/jquery.tokeninput.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.versioned("javascripts/libs/swal/sweetalert2.js")"></script>
 
 
     @scripts
