--- a/app/views/layouts/templates/header.scala.html
+++ b/app/views/layouts/templates/header.scala.html
@@ -21,6 +21,6 @@
 
     <link rel="stylesheet" href="@routes.Assets.versioned("javascripts/libs/datatables/DataTables-1.10.16/css/jquery.dataTables.css")">
     <link rel="stylesheet" href="@routes.Assets.versioned("javascripts/libs/loopj/token-input.css")">
-
+    <link rel="stylesheet" href="@routes.Assets.versioned("javascripts/libs/swal/sweetalert2.css")">
     
 </head>
