--- a/app/views/app/ordenServicio/create/formCreate.scala.html
+++ b/app/views/app/ordenServicio/create/formCreate.scala.html
@@ -4,20 +4,18 @@ ordenServicio: OrdenServicio = null
 <form id="formOrdenServicio">
 	<!-- <div class="panel panel-default"> -->
 		<div class="row ">
-			<div class="col-md-offset-6 col-md-6 col-sm-offset-6 col-sm-6 col-xs-12">
+			<div class="col-md-12 col-sm-12 col-xs-12">
 				<h2><strong>Orden de Servicio</strong></h2>
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<div class="col-md-offset-6 col-md-6 col-sm-offset-6 col-sm-6 col-xs-12">
+					<div class="col-md-6 col-sm-6 col-xs-12">
 						<h4>Número de Orden: <strong><span id="numOrden" class="label label-danger"></span></strong></h4>
 						<h4>Fecha de recepción: <span id="span-fechaRecepcion" class="label label-danger"></span></h4>
-						<input type="text" hidden id="fechaRecepcion" name="fechaRecepcion">
+						<input type="text"hidden id="fechaRecepcion" name="fechaRecepcion">
 						<h4>Inspección Realizada por: <span id="realizadaPor" class="label label-success">@Usuario.getByName(session().get("userName")).obtenNombre</span></h4>
-					</div>
-					<div class="col-sm-offset-6 col-sm-6 col-xs-12" >
 						<h4>Fecha de Entrega: <span id="fechaEntrega" class="label label-danger"></span></h4>
-					</div>	
+					</div>
 				</div>
 			</div>
 		</div>	
@@ -140,7 +138,7 @@ ordenServicio: OrdenServicio = null
 				<div id="recibidoEn" class="row">
 					<div class="col-md-12 col-sm-12">
 						<legend><h4>Recibido en</h4></legend>
-						<div class="col-md-offset-3 col-md-6 col-sm-6 radio">
+						<div class="col-md-6 col-sm-6 radio">
 							<div>
 								<label>
 								<input type="radio" name="contenedor" value="Estuche">
@@ -153,9 +151,6 @@ ordenServicio: OrdenServicio = null
 								Semi
 								</label>
 							</div>
-						<!-- </div>
-
-						<div class="col-md-6 col-sm-6"> -->
 							<div>
 								<label>
 								<input type="radio" name="contenedor" value="Funda">
@@ -168,16 +163,15 @@ ordenServicio: OrdenServicio = null
 								Otro
 								</label>
 							</div>
-						</div>
-						<div id="divOtroContenedor" class="col-md-offset-3 col-md-6" style="display: none;">
-							<div>
-								<input id="contenedorInput" type="text" name="contenedor" class="form-control">
+							<div id="divOtroContenedor" style="display: none;">
+								<input id="contenedorInput" type="text" name="contenedor" class="form-control col-md-6">
 							</div>
 						</div>
-						<div>
-							<label class="col-md-offset-3 col-md-6" for="contenedorDescripcion">
-								<input type="text" id="contenedorDescripcion" name="contenedorDescripcion">
-							</label>
+						<div class="row">
+							<div class=" col-md-6 col-sm-6">
+								<label for="contenedorDescripcion">Descripción del contenedor:</label>
+								<input class="form-control" type="text" id="contenedorDescripcion" name="contenedorDescripcion">
+							</div>
 						</div>
 					</div>
 				</div>
