--- a/app/views/app/ordenServicio/create/agregaServicios.scala.html
+++ b/app/views/app/ordenServicio/create/agregaServicios.scala.html
@@ -4,7 +4,7 @@
 		<div class="row clearfix">
 			<div class="col-md-8 col-sm-8 col-xs-8">
 				<label>Servicio:</label>
-				<select name="" id="optionsServicios" class="form-control">
+				<select class="form-control optionsServicios">
 		            <option value="" disabled="disabled" selected>Seleccione una opci&oacute;n</option>
 				</select>	
 			</div>
