--- a/app/views/app/ordenServicio/create/_inspeccion.scala.html
+++ b/app/views/app/ordenServicio/create/_inspeccion.scala.html
@@ -13,7 +13,7 @@
 			<div id="inner-@id">
 			@for( i<- 0 to (labels.length -1)) {
 				<div class="col-md-offset-2 col-sm-offset-2 col-md-4 col-sm-4 clearfix">
-					<label class="clearMargin">@labels(i)</label>
+					<label class="label@fieldNames(i) clearMargin">@labels(i)</label>
 				</div>
 				
 				<div class="radio  clearfix col-md-4 col-sm-4">
