--- a/app/views/app/ordenServicio/create/formCreate.scala.html
+++ b/app/views/app/ordenServicio/create/formCreate.scala.html
@@ -228,7 +228,7 @@ ordenServicio: OrdenServicio = null
 							</div>
 						</div>
 					</div>
-					<div class="col-md-12">
+					<div id="inspecciones" class="col-md-12">
 						
 						@_inspeccion("accionEntonacion","Acción y Entonación",
 						Array("Acción en el Puente","Acción en Cejuela", "Curvatura de Brazo", "Entonación"),
